tests/parsing/smtlib/poly/errors/042_term_surprise_str_2.psmt2
(set-logic ALL)
(assert (foo ("bla")))
